[gd_scene load_steps=18 format=2]

[ext_resource path="res://warped city files/SPRITES/misc/turret/turret-3.png" type="Texture" id=1]
[ext_resource path="res://warped city files/SPRITES/misc/turret/turret-1.png" type="Texture" id=2]
[ext_resource path="res://warped city files/SPRITES/misc/turret/turret-2.png" type="Texture" id=3]
[ext_resource path="res://warped city files/SPRITES/misc/turret/turret-4.png" type="Texture" id=4]
[ext_resource path="res://warped city files/SPRITES/misc/turret/turret-5.png" type="Texture" id=5]
[ext_resource path="res://scripts/turret.gd" type="Script" id=6]
[ext_resource path="res://scenes/Bullet.tscn" type="PackedScene" id=7]
[ext_resource path="res://warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-6.png" type="Texture" id=8]
[ext_resource path="res://warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-5.png" type="Texture" id=9]
[ext_resource path="res://warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-3.png" type="Texture" id=10]
[ext_resource path="res://warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-1.png" type="Texture" id=11]
[ext_resource path="res://warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-4.png" type="Texture" id=12]
[ext_resource path="res://warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-2.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "turret_idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 8, 10.5 )

[sub_resource type="CircleShape2D" id=28]
radius = 80.0

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "death",
"speed": 15.0
} ]

[node name="turret" type="StaticBody2D"]
collision_mask = 2
script = ExtResource( 6 )
Bullet = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 27 )
animation = "turret_idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 26 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 28 )

[node name="Tween" type="Tween" parent="."]

[node name="BulletContainer" type="YSort" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 29 )
animation = "death"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
